codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_footer_wrap.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                    
  Question 1/2 (2 unanswered)                       
  Choose an option.                                 
                                                    
    1. [ ] Option 1  First choice.                  
  › 2. [ ] Option 2  Second choice.                 
    3. [ ] Option 3  Third choice.                  
                                                    
  space selects option | enter to submit answer     
  ←/→ to navigate questions | esc to interrupt
