codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_long_option_text.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                                                        
  Question 1/1 (1 unanswered)                                                                                           
  Choose one option.                                                                                                    
                                                                                                                        
                                                                                                                        
                                                                                                                        
  › 1. [ ] Job: running/completed/failed/expired; Run/Experiment: succeeded/faile… Keep async job statuses for          
           progress tracking and include enough context for debugging retries, stale workers, and unexpected            
           expiration paths.                                                                                            
    2. [ ] Add a short status model                                                Simpler labels with less detail for  
           quick rollouts.                                                                                              
                                                                                                                        
  space selects option | enter to submit answer | esc to interrupt
