codex-rs/tui/src/bottom_pane/request_user_input/snapshots/codex_tui__bottom_pane__request_user_input__tests__request_user_input_review_confirmation.snap
---
source: tui/src/bottom_pane/request_user_input/mod.rs
expression: "render_snapshot(&overlay, area)"
---
                                                                                          
  Review answers before submit                                                            
  1 question(s)                                                                           
                                                                                          
  • Area: Option 1                                                                        
                                                                                          
  › 1. Submit   Send these answers to the model.                                          
    2. Go back  Return to questions to edit answers.                                      
                                                                                          
                                                                                          
                                                                                          
                                                                                          
  Press enter to confirm or esc to go back
